# LangBot-App

./: .env.example  README.md  pyproject.toml  run.py
backend/: chain.py  main.py
frontend/: app.py  index.html  script.js  style.css
